@@ -2,6 +2,7 @@
 Version 1.5  2008-08-14
   * remove warning info compiled by gcc 4.2
   * add client function storage_download_file_to_file
+  * can use sendfile syscall to send file in Linux and FreeBSD
 
 Version 1.4  2008-08-10
   * storage server recv file method change 
